added new template

--- a/php/web_new/layout/css/content.css
+++ b/php/web_new/layout/css/content.css
@@ -12,7 +12,7 @@ h1
     font-weight: 700;
     text-transform: capitalize;
 }
-#containerClothing, #containerAccessories
+#categoryContainer
 {
     display: grid;
     grid-gap: 70px 20px;
@@ -33,13 +33,7 @@ h1
 {
     box-shadow: 1px 6px 3px 0 rgb(185, 185, 185);
 }
-#containerClothing img
-{
-    width: 100%;
-    border-top-left-radius: 10px;
-    border-top-right-radius: 10px;
-}
-#containerAccessories img
+#categoryContainer img
 {
     width: 100%;
     border-top-left-radius: 10px;
@@ -76,7 +70,7 @@ h2
     {
         font-size: 25px;
     }
-    #containerClothing, #containerAccessories
+    #categoryContainer
     {
         width: 95%;
         grid-gap: 10px;
@@ -88,7 +82,7 @@ h2
     {
         width: 80%;
     }
-    #containerClothing, #containerAccessories
+    #categoryContainer
     {
         display: grid;
         grid-gap: 70px 20px;
@@ -106,7 +100,7 @@ h2
     {
         width: 90%;
     }
-    #containerClothing, #containerAccessories
+    #categoryContainer
     {
         width: 90%;
     }
@@ -117,7 +111,7 @@ h2
     {
         width: 70%;
     }
-    #containerClothing, #containerAccessories
+    #categoryContainer
     {
         width: 70%;
     }
@@ -128,7 +122,7 @@ h2
     {
         width: 80%;
     }
-    #containerClothing, #containerAccessories
+    #categoryContainer, #categoryContainer
     {
         width: 80%;
         grid-template-columns: repeat(2, 1fr);
