--- a/php/web_new/layout/css/footer.css
+++ b/php/web_new/layout/css/footer.css
@@ -11,17 +11,29 @@ body
     color: white;
     letter-spacing: 1px;
     display: grid;
-    grid-template-columns: repeat(4, 1fr);
+    grid-template-columns: repeat(3, 1fr);
     text-transform: uppercase;
     font-size: 15px;
     padding: 15px 300px;
     box-sizing: border-box;
 }
-#containerFooter h3:hover, #containerFooter p:hover
+
+#containerFooter a
+{
+    background-color: rgb(29, 29, 29);
+    color: white;
+    letter-spacing: 1px;
+    text-transform: uppercase;
+    font-size: 12px;
+	text-decoration: none;
+}
+
+#containerFooter h3:hover, #containerFooter p:hover, #containerFooter a:hover
 {
     color: lightslategray;
     cursor: pointer;
 }
+
 #webFooter
 {
     padding-top: 30px;
