--- a/php/web_new/layout/css/header.css
+++ b/php/web_new/layout/css/header.css
@@ -11,7 +11,8 @@ body
     padding: 5px 8px;
     font-size: 14px;
     top: 10px;
-    right:158px;
+	margin-left: 16px;
+    /* left: 20px; */
 }
 #container
 {
@@ -51,11 +52,12 @@ body
 {
     font-weight: bold;
     display: grid;
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: 1fr 1fr 1fr;	
 }
 #collection a
 {
     text-decoration: none;
+	padding-right: 8px;
     color: rgb(29, 29, 29);
 }
 
@@ -193,114 +195,309 @@ body
     }
 }
 
-/* badge media */
+/* common for front */
 
-@media(max-width: 1480px)
-{
-    #badge
-    {
-        right:150px;
-    }
+/* Start Main Rulez */
+
+body {
+	background-color: #F4F4F4;
+	font-size: 16px;
 }
-@media(max-width: 1426px)
-{
-    #badge
-    {
-        right:142px;
-    }
+
+h1 {
+	font-size: 55px;
+	margin: 40px 0;
+	font-weight: bold;
+	color: #666;
 }
-@media(max-width: 1360px)
-{
-    #badge
-    {
-        right:136px;
-    }
+
+.input-container {
+	position: relative;
 }
-@media(max-width: 1320px)
-{
-    #badge
-    {
-        right:129px;
-    }
+
+.asterisk {
+    font-size: 20px;
+    position: absolute;
+    right: 10px;
+    top: 7px;
+    color: #D20707;
 }
-@media(max-width: 1259px)
-{
-    #badge
-    {
-        right:119px;
-    }
+
+.main-form .asterisk {
+    font-size: 30px;
+    position: absolute;
+    right: 30px;
+    top: 8px;
+    color: #D20707;
 }
-@media(max-width: 1212px)
-{
-    #badge
-    {
-        right: 96px;
-    }
+
+.nice-message {
+	padding: 10px;
+	background-color: #FFF;
+	margin: 10px 0;
+	border-left: 5px solid #080;
 }
-@media(max-width: 1155px)
-{
-    #badge
-    {
-        right: 87px;
-    }
+
+/* End Main Rulez */
+
+/* Start Bootstrap Edits */
+
+.navbar {
+	border-radius: 0;
+	margin-bottom: 0;
 }
-@media(max-width: 1090px)
-{
-    #badge
-    {
-        right: 119px;
-    }
+
+.nav > li > a,
+.navbar-brand {
+	padding: 15px 12px;
 }
-@media(max-width: 1030px)
-{
-    #badge
-    {
-        right: 109px;
-    }
+
+.navbar-brand {
+	font-size: 1em;
 }
-@media(max-width: 970px)
-{
-    #badge
-    {
-        right: 100px;
-    }
+
+.navbar-inverse .navbar-nav > .open>a,
+.navbar-inverse .navbar-nav > .open>a:focus,
+.navbar-inverse .navbar-nav > .open>a:hover,
+.dropdown-menu {
+    background-color: #3498db;
 }
-@media(max-width: 910px)
-{
-    #badge
-    {
-        right: 94px;
-    }
+
+.dropdown-menu {
+	min-width: 180px;
+	padding: 0;
+	font-size: 1em;
+	border: none;
+	border-radius: 0;
 }
-@media(max-width: 850px)
-{
-    #badge
-    {
-        right: 87px;
-    }
+
+.dropdown-menu > li > a {
+	color: #FFF;
+	padding: 10px 15px;
 }
-@media(max-width: 750px)
-{
-    #badge
-    {
-        right: 87px;
-        padding: 3px 6px;
-        font-size: 12px;
-        top: 12px;
-    }
+
+.dropdown-menu > li > a:focus,
+.dropdown-menu > li > a:hover {
+    color: #FFF;
+    background-color: #8e44ad;
 }
-@media(max-width: 650px)
-{
-    #badge
-    {
-        right: 78px;
-    }
+
+/* .form-control {
+	position: relative;
+} */
+
+/* End Bootstrap Edits */
+
+/* Start Header */
+
+.upper-bar {
+	padding: 10px;
+	background-color: #FFF
 }
-@media(max-width: 550px)
-{
-    #badge
-    {
-        right: 62px;
-        top: 18px;
-    }
+
+.my-image {
+	width: 36px;
+	height: 36px;
 }
+
+/* End Header */
+
+/* Start Login Page */
+
+.login-page form,
+.the-errors {
+	max-width: 380px;
+	margin: auto;
+}
+
+.login-page form input {
+	margin-bottom: 10px;
+}
+
+.login-page [data-class="login"].selected {
+	color:  rgb(3, 122, 122);;
+}
+
+.login-page [data-class="signup"].selected {
+	color: rgb(3, 122, 122);
+}
+
+.login-page h1 {
+	color: #C0C0C0;
+}
+
+.login-page h1 span {
+	cursor: pointer;
+}
+
+.login-page .signup {
+	display: none;
+}
+
+.the-errors .msg {
+    padding: 10px;
+    text-align: left;
+    background-color: #fff;
+    margin-bottom: 8px;
+    border-right: 1px solid #e0e0e0;
+    border-top: 1px solid #e0e0e0;
+    border-bottom: 1px solid #e0e0e0;
+    color: #919191;
+}
+
+.the-errors .error {
+    border-left: 5px solid #cd6858
+}
+
+/* End Login Page */
+
+/* Start Categories Page */
+
+.item-box {
+	position: relative;
+}
+
+.item-box .price-tag {
+    background-color: #B4B4B4;
+    padding: 2px 10px;
+    position: absolute;
+    left: 0;
+    top: 10px;
+    font-weight: bold;
+    color: #FFF;
+}
+
+.item-box .approve-status {
+    position: absolute;
+    top: 40px;
+    left: 0;
+    background-color: #b85a5a;
+    color: #FFF;
+    padding: 3px 5px;
+}
+
+.item-box .caption p {
+	height: 44px;
+	max-height: 44px;
+}
+
+/* End Categories Page */
+
+/* Start Profile Page */
+
+.information {
+	margin-top: 20px
+}
+
+.information ul {
+	padding: 0;
+	margin: 0;
+}
+
+.information ul li {
+	padding: 10px;
+}
+
+.information ul li:nth-child(odd) {
+	background-color: #EEE;
+}
+
+.information ul li span {
+	display: inline-block;
+	width: 120px;
+}
+
+.thumbnail .date {
+	text-align: right;
+	font-size: 13px;
+	color: #AAA;
+	font-weight: bold;
+}
+
+.information .btn {
+	margin-top: 10px;
+}
+
+/* End Profile Page */
+
+/* Start Show Item Page */
+
+.item-info h2 {
+	padding: 10px;
+	margin: 0;
+}
+
+.item-info p {
+	padding: 10px;
+}
+
+.item-info ul li { 
+	padding: 10px;
+}
+
+.item-info ul li:nth-child(odd) {
+	background-color: #e8e8e8;
+}
+
+.item-info ul li span {
+	display: inline-block;
+	width: 120px;
+}
+
+.tags-items a {
+    display: inline-block;
+    background-color: #e2e2e2;
+    padding: 2px 10px;
+    border-radius: 5px;
+    color: #666;
+    margin-right: 5px;
+}
+
+.add-comment h3 {
+	margin: 0 0 10px;
+}
+
+.add-comment textarea {
+	display: block;
+	margin-bottom: 10px;
+	width: 500px;
+	height: 120px;
+}
+
+.comment-box {
+	margin-bottom: 20px;
+}
+
+.comment-box img {
+	max-width: 100px;
+	margin-bottom: 10px;
+}
+
+.comment-box .lead {
+	background-color: #e0e0e0;
+	position: relative;
+	padding: 10px;
+	margin-top: 25px;
+}
+
+.comment-box .lead:before {
+    content: "";
+    width: 0;
+    height: 0;
+    border-width: 15px;
+    border-style: solid;
+    border-color: transparent #e0e0e0 transparent transparent;
+    position: absolute;
+    left: -28px;
+    top: 10px;
+}
+
+/* End Show Item Page */
+
+/* Start Our Custom */
+
+.custom-hr {
+	border-top: 1px solid #c9c9c9;
+}
+
+/* End Our Custom */
