--- a/old/layout/css/categories.css
+++ b/old/layout/css/categories.css
@@ -26,7 +26,7 @@
 }
 
 .categories .option .active {
-	color: #F00
+	/* color: #F00 */
 }
 
 .categories hr {
@@ -42,6 +42,7 @@
 
 .categories .cat:hover {
 	background-color: #EEE;
+
 }
 
 .categories .cat:hover .hidden-buttons {
@@ -54,7 +55,7 @@
 	transition: all .5s ease-in-out;
 	position: absolute;
 	top: 15px;
-	right: -220px;
+	right: 10px;
 }
 
 .categories .cat .hidden-buttons a {
