--- a/old/layout/css/contentDetails.css
+++ b/old/layout/css/contentDetails.css
@@ -1,7 +1,7 @@
 body
 {
     margin: 0;
-    text-transform: capitalize;
+    /* text-transform: capitalize; */
     font-family: 'Lato', sans-serif;
     font-weight: 100;
 }
