--- a/old/layout/css/cart.css
+++ b/old/layout/css/cart.css
@@ -37,6 +37,7 @@ img
     /* margin: auto */
     padding: 20px 10px;
 	height: min-content;
+	min-width: 300px;
 }
 #box:hover
 {
@@ -60,6 +61,7 @@ img
     background-color: white;
     border-radius: 10px;
     box-shadow: 1px 2px 6px 2px rgb(219, 219, 219);
+	min-width: 300px;
 }
 #total:hover
 {
