--- a/old/layout/css/header.css
+++ b/old/layout/css/header.css
@@ -23,7 +23,7 @@ body
     width: 100%;
     display: grid;
     grid-gap: 10px;
-    grid-template-columns: 1.5fr 1.5fr 5fr 1fr;
+    grid-template-columns: 1fr 3fr 2fr 1fr;
     font-family: 'Lato', sans-serif;
     z-index: 1;
     justify-content: space-between;
@@ -51,8 +51,9 @@ body
 #collection
 {
     font-weight: bold;
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;	
+    display: flex;
+	justify-content: space-around;
+    /* grid-template-columns: 1fr 1fr 1fr;	 */
 }
 #collection a
 {
@@ -98,6 +99,7 @@ body
     display: flex;
     /* float: right; */
     align-items: center;
+	margin: auto;
 }
 
 .userIcon
@@ -106,7 +108,7 @@ body
 }
 #input 
 {
-    width: 35em;
+	width: 60%;
     height: 3em;
     padding: 2px 50px;
     background-color: rgb(241, 241, 241);
@@ -155,7 +157,7 @@ body
     #container
     {
         display: grid;
-        grid-template-columns: 1fr 2fr 0.5fr;
+        grid-template-columns: 1fr 2fr  1fr;
     }
     #search
     {
