--- a/old/layout/css/main.css
+++ b/old/layout/css/main.css
@@ -174,6 +174,10 @@ a:visited {
 	height: 10px;
 }
 
+.h-20 {
+	height: 20px;
+}
+
 .btn-group {
     position: relative;
     display: inline-block;
@@ -567,6 +571,13 @@ a:visited {
     margin: 0 auto;
     padding: 15px;
 }
+
+.new-shop-container {
+    margin: 0 auto;
+    padding: 10px 20px;
+	
+}
+
 
 .text-center {
     text-align: center;
